Fixed title/content overflow issue
refs https://github.com/TryGhost/Team/issues/3258

--- a/assets/css/blog/post.css
+++ b/assets/css/blog/post.css
@@ -39,6 +39,7 @@
     font-size: 30px;
     font-weight: 800;
     letter-spacing: -0.01em;
+    word-break: break-word;
 }
 
 .has-serif-title :where(.post-feed, .single-post) .post-title {
@@ -65,6 +66,7 @@
 
 .post-excerpt {
     margin-top: 12px;
+    word-break: break-word;
 }
 
 .has-serif-body .post-excerpt {
